# fast-api-do-zero

aula01/fast_zero/: .coverage  pyproject.toml
aula01/fast_zero/fast_zero/: ip.py
